--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@ plugins {
 }
 
 apply plugin: 'java'
+apply plugin: 'maven'
 apply plugin: 'jacoco'
 
 version = '0.0.1'
@@ -17,18 +18,40 @@ ext.githubProjectName = rootProject.name // Change if github project name is not
 group = "com.netflix.nfgraph"
 
 repositories {
+    mavenLocal()
     mavenCentral()
+    jcenter()
+
+    maven { url "http://repo1.maven.org/maven2/" }
 }
 
-dependencies {
-    testCompile 'junit:junit:4.11'
+
+
+subprojects {
+    dependencies {
+        testCompile 'junit:junit:4.11'
+    }z
+
+    test.useTestNG()
 }
 
-jacocoTestReport {
+task codeCoverageReport(type: JacocoReport) {
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    subprojects.each {
+        sourceSets = it.sourceSets.main
+    }
+
     reports {
         xml.enabled = true
-        html.enabled = true
+        xml.destination = "${buildDir}/reports/jacoco/report.xml"
+        html.enabled = false
+        csv.enabled = false
     }
+}
+
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
 
 check.dependsOn jacocoTestReport
