--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,9 @@
 language: java
-jdk:
-  - oraclejdk8
-before_script:
-  - chmod +x gradlew
-script:
-  - ./gradlew check
-  - ./gradlew codeCoverageReport
+script: ./gradlew build jacocoTestReport
+jdk: oraclejdk7
+env:
+  matrix:
+  - TERM=dumb
 after_success:
-  - bash <(curl -s https://codecov.io/bash)
+- ./gradlew jacocoRootReport coveralls
 
