--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,9 @@ plugins {
 
 allprojects {
     apply plugin: 'base'
+    apply plugin: 'java'
     apply plugin: 'jacoco'
+
 
     repositories {
         jcenter()
