--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: java
-script: ./gradlew build jacocoTestReport
-jdk: oraclejdk7
-env:
-  matrix:
-  - TERM=dumb
+jdk:
+  - oraclejdk8
 after_success:
-- ./gradlew jacocoRootReport coveralls
-
+  - bash <(curl -s https://codecov.io/bash)
